--- a/TournamentServer/TournamentServerForm.xaml
+++ b/TournamentServer/TournamentServerForm.xaml
@@ -5,6 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:TournamentServer"
         xmlns:controls="clr-namespace:TournamentServer.Controls"
+        xmlns:resources="clr-namespace:TournamentServer.Resources"        
         mc:Ignorable="d"
         Title="TournamentServerForm" 
         Height="450" Width="800"
@@ -13,6 +14,10 @@
         DataContext="{x:Static local:TournamentServerFormContextFactory.TournamentServerFormContext}">
     <Window.Resources>
         <local:TournamentServerFormContext x:Key="FormContext" d:DesignSource=""></local:TournamentServerFormContext>
+        <resources:TournamentServerFormDataModel 
+            x:Key="DataModel"
+            Server="{Binding ElementName=This, Path=Server, Mode=OneWay}">
+        </resources:TournamentServerFormDataModel>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -35,6 +40,9 @@
             Grid.Row="3"
             Name="BtnStartTournament" 
             Click="BtnStartTournament_OnClick"
+            IsEnabled="{Binding 
+                Source={StaticResource DataModel}, 
+                Path=IsButtonStartEnabled}"
             >Start tournament</Button>
     </Grid>
 </Window>
