Update WPF DataModel's structure

--- a/TournamentServer/Controls/ClientsInfoTable.xaml
+++ b/TournamentServer/Controls/ClientsInfoTable.xaml
@@ -29,29 +29,33 @@
                              Grid.Row="0"
                              Grid.Column="0"
                              Background="Cyan"
-                             ClientInfoData="{Binding ClientsInfo[0]}"
-                             ClientIndex="0">
+                             Server="{Binding Server}"
+                             ClientIndex="0"
+                             >
         </controls:ClientInfo>
         <controls:ClientInfo Title="Player 2 info"
                              Grid.Row="0"
                              Grid.Column="1"
                              Background="Coral"
-                             ClientInfoData="{Binding ClientsInfo[1]}"
-                             ClientIndex="1">
+                             Server="{Binding ClientsInfo}"
+                             ClientIndex="1"
+                             >
         </controls:ClientInfo>
         <controls:ClientInfo Title="Player 3 info"
                              Grid.Row="1"
                              Grid.Column="0"
                              Background="Gold"
-                             ClientInfoData="{Binding ClientsInfo[2]}"
-                             ClientIndex="2">
+                             Server="{Binding ClientsInfo}"
+                             ClientIndex="2"
+                             >
         </controls:ClientInfo>
         <controls:ClientInfo Title="Player 4 info"
                              Grid.Row="1"
                              Grid.Column="1"
                              Background="Lime"
-                             ClientInfoData="{Binding ClientsInfo[3]}"
-                             ClientIndex="3">
+                             Server="{Binding ClientsInfo}"
+                             ClientIndex="3"
+                             >
         </controls:ClientInfo>
     </Grid>
 </UserControl>
