--- a/TournamentServer/Controls/ClientInfo.xaml
+++ b/TournamentServer/Controls/ClientInfo.xaml
@@ -12,8 +12,9 @@
     <UserControl.Resources>
         <resources:ClientInfoDataModel
             x:Key="DataModel"
-            ClientInfo="{Binding ElementName=This, Path=ClientInfoData}"
+            Server="{Binding ElementName=This, Path=Server}"
             Title="{Binding ElementName=This, Path=Title}"
+            ClientIndex="{Binding ElementName=This, Path=ClientIndex}"
             >
         </resources:ClientInfoDataModel>
     </UserControl.Resources>
@@ -21,12 +22,47 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid Row="0">
-            <Label Content="{Binding Title}" HorizontalAlignment="Center"></Label>
-        </Grid>
-        <Grid Row="1">
-            
-        </Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"></ColumnDefinition>
+            <ColumnDefinition Width="1*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Label 
+            Grid.Row="0" 
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Content="{Binding Title}" 
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            ></Label>
+        <Label 
+            Grid.Row="1"
+            Grid.Column="0"
+            Content="Client IP:" 
+            HorizontalAlignment="Right" 
+            VerticalAlignment="Center"
+            ></Label>
+        <Label 
+            Grid.Row="1"
+            Grid.Column="1"
+            Content="{Binding ClientIP}" 
+            HorizontalAlignment="Left" 
+            VerticalAlignment="Center"
+        ></Label>
+        <Label 
+            Grid.Row="2"
+            Grid.Column="0"
+            Content="Client Port:" 
+            HorizontalAlignment="Right" 
+            VerticalAlignment="Center"
+        ></Label>
+        <Label 
+            Grid.Row="2"
+            Grid.Column="1"
+            Content="{Binding ClientPort}" 
+            HorizontalAlignment="Left" 
+            VerticalAlignment="Center"
+        ></Label>
     </Grid>
 </UserControl>
